// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component VaultCardInfo renders correctly when only redeemDate is available  1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
>
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    onRequestClose={[Function]}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
    transparent={true}
    visible={true}
  >
    <View
      accessible={true}
      focusable={true}
      forwardedRef={[Function]}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "black",
          "bottom": 0,
          "height": 1334,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 750,
        }
      }
    />
    <View
      forwardedRef={[Function]}
      hideModalContentWhileAnimating={false}
      onModalHide={[Function]}
      onModalWillHide={[Function]}
      onModalWillShow={[Function]}
      pointerEvents="box-none"
      scrollHorizontal={false}
      scrollOffset={0}
      scrollOffsetMax={0}
      scrollTo={null}
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "justifyContent": "flex-start",
          "margin": 37.5,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "transform": Array [
            Object {
              "translateY": 1334,
            },
          ],
        }
      }
      supportedOrientations={
        Array [
          "portrait",
          "landscape",
        ]
      }
      swipeThreshold={100}
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "paddingHorizontal": 36,
              "position": "absolute",
              "width": "100%",
              "zIndex": 1,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 12,
              "left": 12,
              "right": 12,
              "top": 12,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "marginLeft": 24,
              "marginTop": 48,
              "opacity": 1,
            }
          }
          testID="cancel-button"
        >
          <Image
            opacity={1}
            resizeMode="contain"
            size={32}
            source={1}
            style={
              Array [
                Object {
                  "height": 48,
                  "width": 48,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#BFBFBF",
              "height": 616,
              "width": "100%",
            },
          ]
        }
      />
      <View
        accessibilityIgnoresInvertColors={true}
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            },
          ]
        }
      >
        <Image
          resizeMode="center"
          source={1}
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "height": undefined,
                "width": undefined,
              },
              undefined,
            ]
          }
        />
        <View
          marginTop={24}
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "marginTop": 48,
              },
            ]
          }
        >
          <Text
            alignCenter={true}
            allowFontScaling={true}
            color="#353535"
            fontFamily="SEMI BOLD"
            isUnderlined={false}
            isUppercase={false}
            maxFontSizeMultiplier={1.3}
            size="LARGE"
            style={
              Array [
                Object {
                  "color": "#353535",
                  "fontFamily": "Calibre-Semibold",
                  "fontSize": 31.5,
                  "justifyContent": "center",
                  "textAlign": "center",
                  "textDecorationColor": "#353535",
                  "textDecorationLine": "none",
                  "textDecorationStyle": "solid",
                  "textTransform": "none",
                },
              ]
            }
          >
            
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-end",
                "marginBottom": 20,
                "marginTop": 68,
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-around",
                  "width": "60%",
                },
              ]
            }
          >
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "height": 48,
                    "width": 48,
                  },
                ]
              }
            />
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "height": 48,
                    "width": 48,
                  },
                ]
              }
            />
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "flexDirection": "row",
                "height": 90,
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "height": "100%",
                  "justifyContent": "center",
                  "width": "40%",
                },
              ]
            }
            widthPercentage={40}
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#353535"
              fontFamily="MEDIUM"
              isUnderlined={false}
              isUppercase={false}
              marginLeft={32}
              maxFontSizeMultiplier={1.3}
              paddingTop={5}
              size="SMALL"
              style={
                Array [
                  Object {
                    "color": "#353535",
                    "fontFamily": "Calibre-Medium",
                    "fontSize": 27,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#353535",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginLeft": 64,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              Won
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "height": "100%",
                  "justifyContent": "center",
                  "width": "30%",
                },
              ]
            }
            widthPercentage={30}
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#353535"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              marginLeft={18}
              maxFontSizeMultiplier={1.3}
              paddingTop={5}
              size="XSMALL"
              style={
                Array [
                  Object {
                    "color": "#353535",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 24,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#353535",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginLeft": 36,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              May 14, 2019
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "flex-end",
                  "justifyContent": "center",
                  "paddingRight": 50,
                  "width": "30%",
                },
              ]
            }
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#8B8B8B"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              marginLeft={18}
              maxFontSizeMultiplier={1.3}
              paddingTop={5}
              size="XSMALL"
              style={
                Array [
                  Object {
                    "color": "#8B8B8B",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 24,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#8B8B8B",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginLeft": 36,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              11:30 PM
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "bottom": 48,
                "justifyContent": "center",
                "position": "absolute",
                "width": "100%",
              },
            ]
          }
        />
      </View>
    </View>
  </Modal>
</RCTSafeAreaView>
`;

exports[`Component VaultCardInfo renders correctly when only swapDate is available  1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
>
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    onRequestClose={[Function]}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
    transparent={true}
    visible={true}
  >
    <View
      accessible={true}
      focusable={true}
      forwardedRef={[Function]}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "black",
          "bottom": 0,
          "height": 1334,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 750,
        }
      }
    />
    <View
      forwardedRef={[Function]}
      hideModalContentWhileAnimating={false}
      onModalHide={[Function]}
      onModalWillHide={[Function]}
      onModalWillShow={[Function]}
      pointerEvents="box-none"
      scrollHorizontal={false}
      scrollOffset={0}
      scrollOffsetMax={0}
      scrollTo={null}
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "justifyContent": "flex-start",
          "margin": 37.5,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "transform": Array [
            Object {
              "translateY": 1334,
            },
          ],
        }
      }
      supportedOrientations={
        Array [
          "portrait",
          "landscape",
        ]
      }
      swipeThreshold={100}
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "paddingHorizontal": 36,
              "position": "absolute",
              "width": "100%",
              "zIndex": 1,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 12,
              "left": 12,
              "right": 12,
              "top": 12,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "marginLeft": 24,
              "marginTop": 48,
              "opacity": 1,
            }
          }
          testID="cancel-button"
        >
          <Image
            opacity={1}
            resizeMode="contain"
            size={32}
            source={1}
            style={
              Array [
                Object {
                  "height": 48,
                  "width": 48,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#BFBFBF",
              "height": 616,
              "width": "100%",
            },
          ]
        }
      />
      <View
        accessibilityIgnoresInvertColors={true}
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            },
          ]
        }
      >
        <Image
          resizeMode="center"
          source={1}
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "height": undefined,
                "width": undefined,
              },
              undefined,
            ]
          }
        />
        <View
          marginTop={24}
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "marginTop": 48,
              },
            ]
          }
        >
          <Text
            alignCenter={true}
            allowFontScaling={true}
            color="#353535"
            fontFamily="SEMI BOLD"
            isUnderlined={false}
            isUppercase={false}
            maxFontSizeMultiplier={1.3}
            size="LARGE"
            style={
              Array [
                Object {
                  "color": "#353535",
                  "fontFamily": "Calibre-Semibold",
                  "fontSize": 31.5,
                  "justifyContent": "center",
                  "textAlign": "center",
                  "textDecorationColor": "#353535",
                  "textDecorationLine": "none",
                  "textDecorationStyle": "solid",
                  "textTransform": "none",
                },
              ]
            }
          >
            
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-end",
                "marginBottom": 20,
                "marginTop": 68,
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-around",
                  "width": "60%",
                },
              ]
            }
          >
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "height": 48,
                    "width": 48,
                  },
                ]
              }
            />
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "height": 48,
                    "width": 48,
                  },
                ]
              }
            />
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "flexDirection": "row",
                "height": 90,
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "height": "100%",
                  "justifyContent": "center",
                  "width": "40%",
                },
              ]
            }
            widthPercentage={40}
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#353535"
              fontFamily="MEDIUM"
              isUnderlined={false}
              isUppercase={false}
              marginLeft={32}
              maxFontSizeMultiplier={1.3}
              paddingTop={5}
              size="SMALL"
              style={
                Array [
                  Object {
                    "color": "#353535",
                    "fontFamily": "Calibre-Medium",
                    "fontSize": 27,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#353535",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginLeft": 64,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              Won
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "height": "100%",
                  "justifyContent": "center",
                  "width": "30%",
                },
              ]
            }
            widthPercentage={30}
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#353535"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              marginLeft={18}
              maxFontSizeMultiplier={1.3}
              paddingTop={5}
              size="XSMALL"
              style={
                Array [
                  Object {
                    "color": "#353535",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 24,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#353535",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginLeft": 36,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              May 14, 2019
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "flex-end",
                  "justifyContent": "center",
                  "paddingRight": 50,
                  "width": "30%",
                },
              ]
            }
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#8B8B8B"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              marginLeft={18}
              maxFontSizeMultiplier={1.3}
              paddingTop={5}
              size="XSMALL"
              style={
                Array [
                  Object {
                    "color": "#8B8B8B",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 24,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#8B8B8B",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginLeft": 36,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              11:30 PM
            </Text>
          </View>
        </View>
        <View
          backgroundColor="#7C89D8"
          style={
            Array [
              Object {
                "backgroundColor": "#7C89D8",
                "flexDirection": "row",
                "height": 90,
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "height": "100%",
                  "justifyContent": "center",
                  "width": "40%",
                },
              ]
            }
            widthPercentage={40}
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#FFFFFF"
              fontFamily="MEDIUM"
              isUnderlined={false}
              isUppercase={false}
              marginLeft={32}
              maxFontSizeMultiplier={1.3}
              paddingTop={5}
              size="SMALL"
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "Calibre-Medium",
                    "fontSize": 27,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#FFFFFF",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginLeft": 64,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              Swapped
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "height": "100%",
                  "justifyContent": "center",
                  "width": "30%",
                },
              ]
            }
            widthPercentage={30}
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#FFFFFF"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              marginLeft={18}
              maxFontSizeMultiplier={1.3}
              paddingTop={5}
              size="XSMALL"
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 24,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#FFFFFF",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginLeft": 36,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              May 14, 2019
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "flex-end",
                  "justifyContent": "center",
                  "paddingRight": 50,
                  "width": "30%",
                },
              ]
            }
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#FFFFFF"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              marginLeft={18}
              maxFontSizeMultiplier={1.3}
              paddingTop={5}
              size="XSMALL"
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 24,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#FFFFFF",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginLeft": 36,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              11:30 PM
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "bottom": 48,
                "justifyContent": "center",
                "position": "absolute",
                "width": "100%",
              },
            ]
          }
        >
          <View
            marginTop={9}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "marginTop": 18,
                },
              ]
            }
          >
            <Text
              alignCenter={true}
              allowFontScaling={true}
              color="#5F6EAF"
              fontFamily="MEDIUM"
              isUnderlined={false}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              paddingTop={0}
              size="XLARGE"
              style={
                Array [
                  Object {
                    "color": "#5F6EAF",
                    "fontFamily": "Calibre-Medium",
                    "fontSize": 36,
                    "justifyContent": "center",
                    "textAlign": "center",
                    "textDecorationColor": "#5F6EAF",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginLeft": 0,
                    "paddingTop": 0,
                  },
                ]
              }
            >
              x
              0
            </Text>
          </View>
          <Image
            resizeMode="contain"
            source={1}
            style={
              Array [
                Object {
                  "height": 90.66666666666667,
                  "width": 128,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </Modal>
</RCTSafeAreaView>
`;

exports[`Component VaultCardInfo renders correctly when only winDate is available 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
>
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    onRequestClose={[Function]}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
    transparent={true}
    visible={true}
  >
    <View
      accessible={true}
      focusable={true}
      forwardedRef={[Function]}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "black",
          "bottom": 0,
          "height": 1334,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 750,
        }
      }
    />
    <View
      forwardedRef={[Function]}
      hideModalContentWhileAnimating={false}
      onModalHide={[Function]}
      onModalWillHide={[Function]}
      onModalWillShow={[Function]}
      pointerEvents="box-none"
      scrollHorizontal={false}
      scrollOffset={0}
      scrollOffsetMax={0}
      scrollTo={null}
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "justifyContent": "flex-start",
          "margin": 37.5,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "transform": Array [
            Object {
              "translateY": 1334,
            },
          ],
        }
      }
      supportedOrientations={
        Array [
          "portrait",
          "landscape",
        ]
      }
      swipeThreshold={100}
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "paddingHorizontal": 36,
              "position": "absolute",
              "width": "100%",
              "zIndex": 1,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 12,
              "left": 12,
              "right": 12,
              "top": 12,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "marginLeft": 24,
              "marginTop": 48,
              "opacity": 1,
            }
          }
          testID="cancel-button"
        >
          <Image
            opacity={1}
            resizeMode="contain"
            size={32}
            source={1}
            style={
              Array [
                Object {
                  "height": 48,
                  "width": 48,
                },
              ]
            }
          />
        </View>
      </View>
      <Image
        resizeMode="cover"
        source={
          Object {
            "uri": "a",
          }
        }
        style={
          Array [
            Object {
              "height": 616,
              "width": "100%",
            },
          ]
        }
      />
      <View
        accessibilityIgnoresInvertColors={true}
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            },
          ]
        }
      >
        <Image
          resizeMode="center"
          source={1}
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "height": undefined,
                "width": undefined,
              },
              undefined,
            ]
          }
        />
        <View
          marginTop={24}
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "marginTop": 48,
              },
            ]
          }
        >
          <Text
            alignCenter={true}
            allowFontScaling={true}
            color="#353535"
            fontFamily="SEMI BOLD"
            isUnderlined={false}
            isUppercase={false}
            maxFontSizeMultiplier={1.3}
            size="LARGE"
            style={
              Array [
                Object {
                  "color": "#353535",
                  "fontFamily": "Calibre-Semibold",
                  "fontSize": 31.5,
                  "justifyContent": "center",
                  "textAlign": "center",
                  "textDecorationColor": "#353535",
                  "textDecorationLine": "none",
                  "textDecorationStyle": "solid",
                  "textTransform": "none",
                },
              ]
            }
          >
            
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-end",
                "marginBottom": 20,
                "marginTop": 68,
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-around",
                  "width": "60%",
                },
              ]
            }
          >
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "height": 48,
                    "width": 48,
                  },
                ]
              }
            />
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "height": 48,
                    "width": 48,
                  },
                ]
              }
            />
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "flexDirection": "row",
                "height": 90,
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "height": "100%",
                  "justifyContent": "center",
                  "width": "40%",
                },
              ]
            }
            widthPercentage={40}
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#353535"
              fontFamily="MEDIUM"
              isUnderlined={false}
              isUppercase={false}
              marginLeft={32}
              maxFontSizeMultiplier={1.3}
              paddingTop={5}
              size="SMALL"
              style={
                Array [
                  Object {
                    "color": "#353535",
                    "fontFamily": "Calibre-Medium",
                    "fontSize": 27,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#353535",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginLeft": 64,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              Won
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "height": "100%",
                  "justifyContent": "center",
                  "width": "30%",
                },
              ]
            }
            widthPercentage={30}
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#353535"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              marginLeft={18}
              maxFontSizeMultiplier={1.3}
              paddingTop={5}
              size="XSMALL"
              style={
                Array [
                  Object {
                    "color": "#353535",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 24,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#353535",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginLeft": 36,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              May 14, 2019
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "flex-end",
                  "justifyContent": "center",
                  "paddingRight": 50,
                  "width": "30%",
                },
              ]
            }
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#8B8B8B"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              marginLeft={18}
              maxFontSizeMultiplier={1.3}
              paddingTop={5}
              size="XSMALL"
              style={
                Array [
                  Object {
                    "color": "#8B8B8B",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 24,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#8B8B8B",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginLeft": 36,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              11:30 PM
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "bottom": 48,
                "justifyContent": "center",
                "position": "absolute",
                "width": "100%",
              },
            ]
          }
        />
      </View>
    </View>
  </Modal>
</RCTSafeAreaView>
`;

exports[`Component VaultCardInfo renders correctly when only winDate is available with null imageUrl 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
>
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    onRequestClose={[Function]}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
    transparent={true}
    visible={true}
  >
    <View
      accessible={true}
      focusable={true}
      forwardedRef={[Function]}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "black",
          "bottom": 0,
          "height": 1334,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 750,
        }
      }
    />
    <View
      forwardedRef={[Function]}
      hideModalContentWhileAnimating={false}
      onModalHide={[Function]}
      onModalWillHide={[Function]}
      onModalWillShow={[Function]}
      pointerEvents="box-none"
      scrollHorizontal={false}
      scrollOffset={0}
      scrollOffsetMax={0}
      scrollTo={null}
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "justifyContent": "flex-start",
          "margin": 37.5,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "transform": Array [
            Object {
              "translateY": 1334,
            },
          ],
        }
      }
      supportedOrientations={
        Array [
          "portrait",
          "landscape",
        ]
      }
      swipeThreshold={100}
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "paddingHorizontal": 36,
              "position": "absolute",
              "width": "100%",
              "zIndex": 1,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 12,
              "left": 12,
              "right": 12,
              "top": 12,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "marginLeft": 24,
              "marginTop": 48,
              "opacity": 1,
            }
          }
          testID="cancel-button"
        >
          <Image
            opacity={1}
            resizeMode="contain"
            size={32}
            source={1}
            style={
              Array [
                Object {
                  "height": 48,
                  "width": 48,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#BFBFBF",
              "height": 616,
              "width": "100%",
            },
          ]
        }
      />
      <View
        accessibilityIgnoresInvertColors={true}
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            },
          ]
        }
      >
        <Image
          resizeMode="center"
          source={1}
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "height": undefined,
                "width": undefined,
              },
              undefined,
            ]
          }
        />
        <View
          marginTop={24}
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "marginTop": 48,
              },
            ]
          }
        >
          <Text
            alignCenter={true}
            allowFontScaling={true}
            color="#353535"
            fontFamily="SEMI BOLD"
            isUnderlined={false}
            isUppercase={false}
            maxFontSizeMultiplier={1.3}
            size="LARGE"
            style={
              Array [
                Object {
                  "color": "#353535",
                  "fontFamily": "Calibre-Semibold",
                  "fontSize": 31.5,
                  "justifyContent": "center",
                  "textAlign": "center",
                  "textDecorationColor": "#353535",
                  "textDecorationLine": "none",
                  "textDecorationStyle": "solid",
                  "textTransform": "none",
                },
              ]
            }
          >
            
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-end",
                "marginBottom": 20,
                "marginTop": 68,
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-around",
                  "width": "60%",
                },
              ]
            }
          >
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "height": 48,
                    "width": 48,
                  },
                ]
              }
            />
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "height": 48,
                    "width": 48,
                  },
                ]
              }
            />
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "flexDirection": "row",
                "height": 90,
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "height": "100%",
                  "justifyContent": "center",
                  "width": "40%",
                },
              ]
            }
            widthPercentage={40}
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#353535"
              fontFamily="MEDIUM"
              isUnderlined={false}
              isUppercase={false}
              marginLeft={32}
              maxFontSizeMultiplier={1.3}
              paddingTop={5}
              size="SMALL"
              style={
                Array [
                  Object {
                    "color": "#353535",
                    "fontFamily": "Calibre-Medium",
                    "fontSize": 27,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#353535",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginLeft": 64,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              Won
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "height": "100%",
                  "justifyContent": "center",
                  "width": "30%",
                },
              ]
            }
            widthPercentage={30}
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#353535"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              marginLeft={18}
              maxFontSizeMultiplier={1.3}
              paddingTop={5}
              size="XSMALL"
              style={
                Array [
                  Object {
                    "color": "#353535",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 24,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#353535",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginLeft": 36,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              May 14, 2019
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "flex-end",
                  "justifyContent": "center",
                  "paddingRight": 50,
                  "width": "30%",
                },
              ]
            }
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#8B8B8B"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              marginLeft={18}
              maxFontSizeMultiplier={1.3}
              paddingTop={5}
              size="XSMALL"
              style={
                Array [
                  Object {
                    "color": "#8B8B8B",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 24,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#8B8B8B",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginLeft": 36,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              11:30 PM
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "bottom": 48,
                "justifyContent": "center",
                "position": "absolute",
                "width": "100%",
              },
            ]
          }
        />
      </View>
    </View>
  </Modal>
</RCTSafeAreaView>
`;

exports[`Component VaultCardInfo renders correctly when redeemDate and shippedDate are available  1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
>
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    onRequestClose={[Function]}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
    transparent={true}
    visible={true}
  >
    <View
      accessible={true}
      focusable={true}
      forwardedRef={[Function]}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "black",
          "bottom": 0,
          "height": 1334,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 750,
        }
      }
    />
    <View
      forwardedRef={[Function]}
      hideModalContentWhileAnimating={false}
      onModalHide={[Function]}
      onModalWillHide={[Function]}
      onModalWillShow={[Function]}
      pointerEvents="box-none"
      scrollHorizontal={false}
      scrollOffset={0}
      scrollOffsetMax={0}
      scrollTo={null}
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "justifyContent": "flex-start",
          "margin": 37.5,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "transform": Array [
            Object {
              "translateY": 1334,
            },
          ],
        }
      }
      supportedOrientations={
        Array [
          "portrait",
          "landscape",
        ]
      }
      swipeThreshold={100}
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "paddingHorizontal": 36,
              "position": "absolute",
              "width": "100%",
              "zIndex": 1,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 12,
              "left": 12,
              "right": 12,
              "top": 12,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "marginLeft": 24,
              "marginTop": 48,
              "opacity": 1,
            }
          }
          testID="cancel-button"
        >
          <Image
            opacity={1}
            resizeMode="contain"
            size={32}
            source={1}
            style={
              Array [
                Object {
                  "height": 48,
                  "width": 48,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#BFBFBF",
              "height": 616,
              "width": "100%",
            },
          ]
        }
      />
      <View
        accessibilityIgnoresInvertColors={true}
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            },
          ]
        }
      >
        <Image
          resizeMode="center"
          source={1}
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "height": undefined,
                "width": undefined,
              },
              undefined,
            ]
          }
        />
        <View
          marginTop={24}
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "marginTop": 48,
              },
            ]
          }
        >
          <Text
            alignCenter={true}
            allowFontScaling={true}
            color="#353535"
            fontFamily="SEMI BOLD"
            isUnderlined={false}
            isUppercase={false}
            maxFontSizeMultiplier={1.3}
            size="LARGE"
            style={
              Array [
                Object {
                  "color": "#353535",
                  "fontFamily": "Calibre-Semibold",
                  "fontSize": 31.5,
                  "justifyContent": "center",
                  "textAlign": "center",
                  "textDecorationColor": "#353535",
                  "textDecorationLine": "none",
                  "textDecorationStyle": "solid",
                  "textTransform": "none",
                },
              ]
            }
          >
            
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-end",
                "marginBottom": 20,
                "marginTop": 68,
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-around",
                  "width": "60%",
                },
              ]
            }
          >
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "height": 48,
                    "width": 48,
                  },
                ]
              }
            />
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "height": 48,
                    "width": 48,
                  },
                ]
              }
            />
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "flexDirection": "row",
                "height": 90,
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "height": "100%",
                  "justifyContent": "center",
                  "width": "40%",
                },
              ]
            }
            widthPercentage={40}
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#353535"
              fontFamily="MEDIUM"
              isUnderlined={false}
              isUppercase={false}
              marginLeft={32}
              maxFontSizeMultiplier={1.3}
              paddingTop={5}
              size="SMALL"
              style={
                Array [
                  Object {
                    "color": "#353535",
                    "fontFamily": "Calibre-Medium",
                    "fontSize": 27,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#353535",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginLeft": 64,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              Won
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "height": "100%",
                  "justifyContent": "center",
                  "width": "30%",
                },
              ]
            }
            widthPercentage={30}
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#353535"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              marginLeft={18}
              maxFontSizeMultiplier={1.3}
              paddingTop={5}
              size="XSMALL"
              style={
                Array [
                  Object {
                    "color": "#353535",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 24,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#353535",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginLeft": 36,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              May 14, 2019
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "flex-end",
                  "justifyContent": "center",
                  "paddingRight": 50,
                  "width": "30%",
                },
              ]
            }
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#8B8B8B"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              marginLeft={18}
              maxFontSizeMultiplier={1.3}
              paddingTop={5}
              size="XSMALL"
              style={
                Array [
                  Object {
                    "color": "#8B8B8B",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 24,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#8B8B8B",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginLeft": 36,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              11:30 PM
            </Text>
          </View>
        </View>
        <View
          backgroundColor="#7C89D8"
          style={
            Array [
              Object {
                "backgroundColor": "#7C89D8",
                "flexDirection": "row",
                "height": 90,
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "height": "100%",
                  "justifyContent": "center",
                  "width": "40%",
                },
              ]
            }
            widthPercentage={40}
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#FFFFFF"
              fontFamily="MEDIUM"
              isUnderlined={false}
              isUppercase={false}
              marginLeft={32}
              maxFontSizeMultiplier={1.3}
              paddingTop={5}
              size="SMALL"
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "Calibre-Medium",
                    "fontSize": 27,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#FFFFFF",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginLeft": 64,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              Swapped
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "height": "100%",
                  "justifyContent": "center",
                  "width": "30%",
                },
              ]
            }
            widthPercentage={30}
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#FFFFFF"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              marginLeft={18}
              maxFontSizeMultiplier={1.3}
              paddingTop={5}
              size="XSMALL"
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 24,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#FFFFFF",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginLeft": 36,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              May 14, 2019
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "flex-end",
                  "justifyContent": "center",
                  "paddingRight": 50,
                  "width": "30%",
                },
              ]
            }
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#FFFFFF"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              marginLeft={18}
              maxFontSizeMultiplier={1.3}
              paddingTop={5}
              size="XSMALL"
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 24,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#FFFFFF",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginLeft": 36,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              11:30 PM
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "bottom": 48,
                "justifyContent": "center",
                "position": "absolute",
                "width": "100%",
              },
            ]
          }
        >
          <View
            marginTop={9}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "marginTop": 18,
                },
              ]
            }
          >
            <Text
              alignCenter={true}
              allowFontScaling={true}
              color="#5F6EAF"
              fontFamily="MEDIUM"
              isUnderlined={false}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              paddingTop={0}
              size="XLARGE"
              style={
                Array [
                  Object {
                    "color": "#5F6EAF",
                    "fontFamily": "Calibre-Medium",
                    "fontSize": 36,
                    "justifyContent": "center",
                    "textAlign": "center",
                    "textDecorationColor": "#5F6EAF",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginLeft": 0,
                    "paddingTop": 0,
                  },
                ]
              }
            >
              x
              0
            </Text>
          </View>
          <Image
            resizeMode="contain"
            source={1}
            style={
              Array [
                Object {
                  "height": 90.66666666666667,
                  "width": 128,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </Modal>
</RCTSafeAreaView>
`;
